app/assets/stylesheets/styles.css
/*
A custom Bootstrap 3.2 'Google Plus style' theme
from http://bootply.com

This CSS code should follow the 'bootstrap.css'
in your HTML file.

license: MIT
author: bootply.com
*/
@import url(http://fonts.googleapis.com/css?family=Roboto:400);
body {
  background-color:#e0e0e0;
  -webkit-font-smoothing: antialiased;
  font: normal 14px Roboto,arial,sans-serif;
}
.navbar-default {background-color:#f4f4f4;margin-top:50px;border-width:0;z-index:5;}
.navbar-default .navbar-nav > .active > a,.navbar-default .navbar-nav > li:hover > a {border:0 solid #4285f4;border-bottom-width:2px;font-weight:800;background-color:transparent;}
.navbar-default .dropdown-menu {background-color:#ffffff;}
.navbar-default .dropdown-menu li > a {padding-left:30px;}

.header {background-color:#ffffff;border-width:0;}
.header .navbar-collapse {background-color:#ffffff;}
.btn,.form-control,.panel,.list-group,.well {border-radius:1px;box-shadow:0 0 0;}
.form-control {border-color:#d7d7d7;}
.btn-primary {border-color:transparent;}
.btn-primary,.label-primary,.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {background-color:#4285f4;}
.btn-plus {background-color:#ffffff;border-width:1px;border-color:#dddddd;box-shadow:1px 1px 0 #999999;border-radius:3px;color:#666666;text-shadow:0 0 1px #bbbbbb;}
.well,.panel {border-color:#d2d2d2;box-shadow:0 1px 0 #cfcfcf;border-radius:3px;}
.btn-success,.label-success,.progress-bar-success{background-color:#65b045;}
.btn-info,.label-info,.progress-bar-info{background-color:#a0c3ff;border-color:#a0c3ff;}
.btn-danger,.label-danger,.progress-bar-danger{background-color:#dd4b39;}
.btn-warning,.label-warning,.progress-bar-warning{background-color:#f4b400;color:#444444;}

hr {border-color:#ececec;}
button {
 outline: 0;
}
textarea {
 resize: none;
 outline: 0; 
}
.panel .btn i,.btn span{
 color:#666666;
}
.panel .panel-heading {
 background-color:#ffffff;
 font-weight:700;
 font-size:16px;
 color:#262626;
 border-color:#ffffff;
}
.panel .panel-heading a {
 font-weight:400;
 font-size:11px;
}
.panel .panel-default {
 border-color:#cccccc;
}
.panel .panel-thumbnail {
 padding:0;
}
.panel .img-circle {
 width:50px;
 height:50px;
}
.list-group-item:first-child,.list-group-item:last-child {
 border-radius:0;
}
h3,h4,h5 { 
 border:0 solid #efefef; 
 border-bottom-width:1px;
 padding-bottom:10px;
}
.modal-dialog {
 width: 450px;
}
.modal-footer {
 border-width:0;
}
.dropdown-menu {
 background-color:#f4f4f4;
 border-color:#f0f0f0;
 border-radius:0;
 margin-top:-1px;
}
/* end theme */

/* template layout*/

#main {
 padding-top:72px;
 font-family: 'Bree Serif', serif;
}

#navbar-collapse1{
  font-family: 'Bree Serif', serif;
  font-size: 16px;
}

.navbar-brand{
  font-family: 'Bree Serif', serif;
  font-size: 30px;
}

/*
#loginModal{
  font-family: 'Bree Serif', serif;
}

#RegisterModal{
  font-family: 'Bree Serif', serif; 
}
*/

/* Customed */

body {
  background: url("/stardust.png");
  font-family: 'Bree Serif', serif; 
}

.isotype .isotype-item { 
  width: 23.8%;
  margin-left: 1%;
}

.chat {
  background: #f2f0f0;
  /*margin: 0 -15px;*/
}

.chatbox {
    border-top: 1px solid white;
    border-bottom: 1px solid rgba(#000,.1);
    padding: 15px 15px;
    padding-left: 65px;

    @include pie-clearfix;
}

.chatbox:first-child {
  color: #b29c9c;
}

.chatbox:first-child #cname {
  color: #262626;
}

.chatbox:last-child {
  border-bottom: none;
}

.chatbox img {
  margin-left: -50px;
  float: left;
}

.chatbox .img-circle{
  height: 40px;
  width: 40px;
  vertical-align: middle;
}

.chatbox b {
  /*padding-left: 15px;*/
  font-weight: bold;
}
/* 
#preview{
  margin-bottom: 210px;
}
*/

